--- a/wwwroot/esmaltes.html
+++ b/wwwroot/esmaltes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Elétricos</title>
+    <title>Esmaltes</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
@@ -31,11 +31,11 @@
                         <li><a class="dropdown-item" href="tintas.html">Tintas</a></li>
                         <li><a class="dropdown-item" href="vernizes.html">Vernizes</a></li>
                         <li><a class="dropdown-item" href="esmaltes.html">Esmaltes</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#ferramentas">Ferramentas</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#pisos">Pisos e Revestimentos</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#metais">Metais</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#portas">Portas</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#janelas">Janelas</a></li>
+                        <li><a class="dropdown-item" href="ferramentas.html">Ferramentas</a></li>
+                        <li><a class="dropdown-item" href="piso.html">Pisos e Revestimentos</a></li>
+                        <li><a class="dropdown-item" href="metais.html">Metais</a></li>
+                        <li><a class="dropdown-item" href="portas.html">Portas</a></li>
+                        <li><a class="dropdown-item" href="janelas.html">Janelas</a></li>
                     </ul>
                 </li>
 
@@ -53,11 +53,11 @@
 
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/eletroduto.webp" class="card-img-top" alt="Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros">
+                    <img src="img/esmaltes/esmalte coralit.webp" class="card-img-top" alt="Esmalte Sintético Coralit Secagem Rápida Acetinado Branco 3,6L Coral">
                     <div class="card-body">
-                        <h5 class="card-title">Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros</h5>
-                        <p class="card-text">R$ 65,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros', 65.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmalte Sintético Coralit Secagem Rápida Acetinado Branco 3,6L Coral</h5>
+                        <p class="card-text">R$159,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmalte Sintético Coralit Secagem Rápida Acetinado Branco 3,6L Coral',159.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
                         <a href="compra.html?produto=Eletroduto+Corrugado+25mm+Amarelo+Adtex+50+Metros&preco=65.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
@@ -68,11 +68,11 @@
             </div>
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/mini dijunstor.webp" class="card-img-top" alt="Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg">
+                    <img src="img/esmaltes/esmalte kolimar.webp" class="card-img-top" alt="Esmalte Sintético Fosco Preto 900ml Kolimar">
                     <div class="card-body">
-                        <h5 class="card-title">Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg</h5>
-                        <p class="card-text">R$ 34,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg', 34.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmalte Sintético Fosco Preto 900ml Kolimar</h5>
+                        <p class="card-text">R$ 35,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmalte Sintético Fosco Preto 900ml Kolimar', 35.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
                         <a href="compra.html?produto=Mini+Disjuntor+Bipolar+32A+MDW-P+Curva+C+3KA+Weg&preco=34.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
@@ -83,11 +83,11 @@
             </div>
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/quadropvc.webp" class="card-img-top" alt="Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco">
+                    <img src="img/esmaltes/esmalte coralit2.webp" class="card-img-top" alt="Esmalte Sintético Coralit Secagem Rápida Balance Brilhante Tabaco 900ml Coral">
                     <div class="card-body">
-                        <h5 class="card-title">Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco</h5>
-                        <p class="card-text">R$ 100,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco', 100.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmalte Sintético Coralit Balance Brilhante Tabaco 900ml Coral</h5>
+                        <p class="card-text">R$59,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmalte Sintético Coralit Balance Brilhante Tabaco 900ml Coral',59.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
                         <a href="compra.html?produto=Quadro+PVC+Disjuntor+Embutir+sem+Barramento+para+12%2F16+Disj+Branco&preco=100.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
@@ -98,11 +98,11 @@
             </div>
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/duto.webp" class="card-img-top" alt="Duto Corrugado 2 DN 63 Preto Tecnoprado 50 Metros">
+                    <img src="img/esmaltes/esmalte anti.webp" class="card-img-top" alt="Esmalte Sintético Coralit Antiferrugem Preto 3,6L Coral">
                     <div class="card-body">
-                        <h5 class="card-title">Duto Corrugado 2&quot; DN 63 Preto Tecnoprado 50 Metros</h5>
-                        <p class="card-text">R$ 229,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Duto Corrugado 2&quot; DN 63 Preto Tecnoprado 50 Metros', 229.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmalte Sintético Coralit Antiferrugem Preto 3,6L Coral</h5>
+                        <p class="card-text">R$ 214,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmalte Sintético Coralit Antiferrugem Preto 3,6L Coral', 214.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
                         <a href="compra.html?produto=Duto+Corrugado+2%22+DN+63+Preto+Tecnoprado+50+Metros&preco=229.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
@@ -113,11 +113,11 @@
             </div>
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/hidraulicos/sifaoextensivel.webp" class="card-img-top" alt="Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre">
+                    <img src="img/esmaltes/esmalte coralit3.webp" class="card-img-top" alt="Esmalte Sintético Coralit Secagem Rápida Balance Acetinado Gelo 3,6L Coral">
                     <div class="card-body">
-                        <h5 class="card-title">Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre</h5>
-                        <p class="card-text">R$ 4,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre', 4.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmalte Sintético Coralit Secagem Rápida Balance Acetinado Gelo 3,6L Coral</h5>
+                        <p class="card-text">R$174,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmalte Sintético Coralit Balance Acetinado Gelo 3,6L Coral',174.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
                         <a href="compra.html?produto=Sifão+Extensível+Universal+Branco+66cm+DN38%2F40%2F48%2F50+Tigre&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
@@ -128,11 +128,11 @@
             </div>
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/hidraulicos/baseregistro.webp" class="card-img-top" alt="Base para Registro de Pressão MVS Bruto 4416 3/4">
+                    <img src="img/esmaltes/esmalte coralit4.webp" class="card-img-top" alt="Esmalte Sintético Coralit Ultra Resistência Alto Brilho Branco 900ml Coral">
                     <div class="card-body">
-                        <h5 class="card-title">Base para Registro de Pressão MVS Bruto 4416 3/4&quot; Deca</h5>
-                        <p class="card-text">R$ 44,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Base para Registro de Pressão MVS Bruto 4416 3/4&quot; Deca', 44.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmalte Sintético Coralit Ultra Resistência Alto Brilho Branco 900ml Coral</h5>
+                        <p class="card-text">R$54,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmalte Sintético Coralit Ultra Resistência Branco 900ml Coral',54.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
                         <a href="compra.html?produto=Base+para+Registro+de+Pressão+MVS+Bruto+4416+3%2F4%22+Deca&preco=44.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
