--- a/wwwroot/ferramentas.html
+++ b/wwwroot/ferramentas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Elétricos</title>
+    <title>Ferramentas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
@@ -50,92 +50,99 @@
 <main>
     <div class="container">
         <div class="row">
+            <div class="col-xl-4 col-sm-6 g-5">
+                <div class="card" style="background-color: transparent; border: none;">
+                    <img src="img/ferramentas/carrinho e mão.webp" class="card-img-top" alt="CCarrinho de Mão Aço Gordini Pop PCI Desmontado 45L Esfera">
+                    <div class="card-body">
+                        <h5 class="card-title">Carrinho de Mão Aço Gordini Pop PCI Desmontado 45L Esfera</h5>
+                        <p class="card-text">R$119,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Carrinho de Mão Aço Gordini Pop PCI Desmontado 45L Esfera', 119.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                            Adicionar ao Carrinho
+                        </button>
+                        <a href="compra.html?produto=Caixa+d\'Água+Polietileno+com+Tampa+Azul+1000L+Fortlev&preco=369.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                            Comprar
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/eletroduto.webp" class="card-img-top" alt="Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros">
+                    <img src="img/ferramentas/disco de corte.webp" class="card-img-top" alt="Disco de Corte para Metal 4.1/2" 115x1,6x22,23mm Bosch">
                     <div class="card-body">
-                        <h5 class="card-title">Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros</h5>
-                        <p class="card-text">R$ 65,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros', 65.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Disco de Corte para Metal 4.1/2" 115x1,6x22,23mm Bosch</h5>
+                        <p class="card-text">R$2,37</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Disco de Corte para Metal 4.1/2 115x1,6x22,23mm Bosch',2.37);" 
+                        style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Eletroduto+Corrugado+25mm+Amarelo+Adtex+50+Metros&preco=65.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Tubo+Esgoto+Série+Normal+PVC+DN100+Branco+6m+Fortlev&preco=83.50" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/mini dijunstor.webp" class="card-img-top" alt="Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg">
+                    <img src="img/ferramentas/betoneira.webp" class="card-img-top" alt="Betoneira 400L 1 Traço Max Monofásica 220V CSM">
                     <div class="card-body">
-                        <h5 class="card-title">Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg</h5>
-                        <p class="card-text">R$ 34,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg', 34.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Betoneira 400L 1 Traço Max Monofásica 220V CSM</h5>
+                        <p class="card-text">R$4367,00</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Betoneira 400L 1 Traço Max Monofásica 220V CSM', 4367.00);" 
+                        style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Mini+Disjuntor+Bipolar+32A+MDW-P+Curva+C+3KA+Weg&preco=34.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Tubo+Soldável+Água+Fria+PVC+Marrom+25mm+6m+Fortlev&preco=17.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/quadropvc.webp" class="card-img-top" alt="Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco">
+                    <img src="img/ferramentas/furadeira.webp" class="card-img-top" alt="Furadeira Parafusadeira 1/4" 12V 1 Bat GSR1000 com Maleta Bosch">
                     <div class="card-body">
-                        <h5 class="card-title">Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco</h5>
-                        <p class="card-text">R$ 100,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco', 100.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Furadeira Parafusadeira 1/4" 12V 1 Bat GSR1000 com Maleta Bosch</h5>
+                        <p class="card-text">R$319,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Furadeira Parafusadeira 1/4 12V 1 Bat GSR1000 com Maleta Bosch',319.90);" 
+                        style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Quadro+PVC+Disjuntor+Embutir+sem+Barramento+para+12%2F16+Disj+Branco&preco=100.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Joelho+90+Esgoto+Série+Normal+PVC+DN+100+Fortlev&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/duto.webp" class="card-img-top" alt="Duto Corrugado 2 DN 63 Preto Tecnoprado 50 Metros">
+                    <img src="img/ferramentas/esmerilhadeira.webp" class="card-img-top" alt="Esmerilhadeira Angular 4.1/2" (115mm) 720W WS4751.3 220V Wesco">
                     <div class="card-body">
-                        <h5 class="card-title">Duto Corrugado 2&quot; DN 63 Preto Tecnoprado 50 Metros</h5>
-                        <p class="card-text">R$ 229,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Duto Corrugado 2&quot; DN 63 Preto Tecnoprado 50 Metros', 229.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Esmerilhadeira Angular 4.1/2" (115mm) 720W WS4751.3 220V Wesco</h5>
+                        <p class="card-text">R$119,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Esmerilhadeira Angular 4.1/2 (115mm) 720W WS4751.3 220V Wesco',119.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Duto+Corrugado+2%22+DN+63+Preto+Tecnoprado+50+Metros&preco=229.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Sifão+Extensível+Universal+Branco+66cm+DN38/40/48/50+Tigre&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/hidraulicos/sifaoextensivel.webp" class="card-img-top" alt="Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre">
+                    <img src="img/ferramentas/pá.webp" class="card-img-top" alt="Pá Quadrada 71cm Chapa Aço Cabo "Y" Madeira Tramontina">
                     <div class="card-body">
-                        <h5 class="card-title">Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre</h5>
-                        <p class="card-text">R$ 4,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre', 4.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Pá Quadrada 71cm Chapa Aço Cabo "Y" Madeira Tramontina</h5>
+                        <p class="card-text">R$36,19</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Base para Registro de Pressão MVS Bruto 4416 3/4',36.19);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Sifão+Extensível+Universal+Branco+66cm+DN38%2F40%2F48%2F50+Tigre&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
-                            Comprar
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-sm-6 g-5">
-                <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/hidraulicos/baseregistro.webp" class="card-img-top" alt="Base para Registro de Pressão MVS Bruto 4416 3/4">
-                    <div class="card-body">
-                        <h5 class="card-title">Base para Registro de Pressão MVS Bruto 4416 3/4&quot; Deca</h5>
-                        <p class="card-text">R$ 44,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Base para Registro de Pressão MVS Bruto 4416 3/4&quot; Deca', 44.90);" style="transition: all 0.3s ease; font-weight: bold;">
-                            Adicionar ao Carrinho
-                        </button>
-                        <a href="compra.html?produto=Base+para+Registro+de+Pressão+MVS+Bruto+4416+3%2F4%22+Deca&preco=44.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Base+para+Registro+de+Pressão+MVS+Bruto+4416+3/4+Deca&preco=44.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
@@ -144,6 +151,7 @@
         </div>
     </div>
 </main>
+
 <footer class="bg-blue text-white py-4 mt-auto">
     <div class="container text-center">
         <p><strong>Endereço:</strong> Rua Mariana, 360 - Centro, Ipatinga-MG</p>
@@ -154,6 +162,7 @@
         </div>
     </div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
