--- a/wwwroot/piso.html
+++ b/wwwroot/piso.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Elétricos</title>
+    <title>Pisos e Revestimentos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
@@ -50,92 +50,98 @@
 <main>
     <div class="container">
         <div class="row">
+            <div class="col-xl-4 col-sm-6 g-5">
+                <div class="card" style="background-color: transparent; border: none;">
+                    <img src="img/piso/argamassa interna.webp" class="card-img-top" alt="Argamassa Interna Porcelanato Cinza 20kg Fortaleza">
+                    <div class="card-body">
+                        <h5 class="card-title">Argamassa Interna Porcelanato Cinza 20kg Fortaleza</h5>
+                        <p class="card-text">R$23,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Argamassa Interna Porcelanato Cinza 20kg Fortaleza',23.90);" 
+                        style="transition: all 0.3s ease; font-weight: bold;">
+                            Adicionar ao Carrinho
+                        </button>
+                        <a href="compra.html?produto=Caixa+d\'Água+Polietileno+com+Tampa+Azul+1000L+Fortlev&preco=369.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                            Comprar
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/eletroduto.webp" class="card-img-top" alt="Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros">
+                    <img src="img/piso/argamassa interna2.webp" class="card-img-top" alt="Argamassa Interna Porcelanato Cinza 20kg Quartzolit">
                     <div class="card-body">
-                        <h5 class="card-title">Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros</h5>
-                        <p class="card-text">R$ 65,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Eletroduto Corrugado 25mm Amarelo Adtex 50 Metros', 65.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Argamassa Interna Porcelanato Cinza 20kg Quartzolit</h5>
+                        <p class="card-text">R$24,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Argamassa Interna Porcelanato Cinza 20kg Quartzolit',24.90);" 
+                        style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Eletroduto+Corrugado+25mm+Amarelo+Adtex+50+Metros&preco=65.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Tubo+Esgoto+Série+Normal+PVC+DN100+Branco+6m+Fortlev&preco=83.50" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/mini dijunstor.webp" class="card-img-top" alt="Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg">
+                    <img src="img/piso/argamassa impermeabilizante.webp" class="card-img-top" alt="Argamassa Impermeabilizante Semi Flexível Viaplus 1000 18Kg Viapol">
                     <div class="card-body">
-                        <h5 class="card-title">Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg</h5>
-                        <p class="card-text">R$ 34,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Mini Disjuntor Bipolar 32A MDW-P Curva C 3KA Weg', 34.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Argamassa Impermeabilizante Semi Flexível Viaplus 1000 18Kg Viapol</h5>
+                        <p class="card-text">R50,50</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Argamassa Impermeabilizante Semi Flexível Viaplus 1000 18Kg Viapol',50.50);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Mini+Disjuntor+Bipolar+32A+MDW-P+Curva+C+3KA+Weg&preco=34.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Tubo+Soldável+Água+Fria+PVC+Marrom+25mm+6m+Fortlev&preco=17.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/quadropvc.webp" class="card-img-top" alt="Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco">
+                    <img src="img/piso/porcelanato cement.webp" class="card-img-top" alt="Porcelanato Cement Blend Retificado Acetinado Cinza 61x61cm 1,87m2">
                     <div class="card-body">
-                        <h5 class="card-title">Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco</h5>
-                        <p class="card-text">R$ 100,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Quadro PVC Disjuntor Embutir sem Barramento para 12/16 Disj Branco', 100.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Porcelanato Cement Blend Retificado Acetinado Cinza 61x61cm 1,87m2</h5>
+                        <p class="card-text">R$45,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Porcelanato Cement Blend Retificado Acetinado Cinza 61x61cm 1,87m2',45.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Quadro+PVC+Disjuntor+Embutir+sem+Barramento+para+12%2F16+Disj+Branco&preco=100.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Joelho+90+Esgoto+Série+Normal+PVC+DN+100+Fortlev&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/eletricos/duto.webp" class="card-img-top" alt="Duto Corrugado 2 DN 63 Preto Tecnoprado 50 Metros">
+                    <img src="img/piso/porcelanato retificado.webp" class="card-img-top" alt="Porcelanato 61082 Retificado Acetinado Branco 61x61cm 1,87m2">
                     <div class="card-body">
-                        <h5 class="card-title">Duto Corrugado 2&quot; DN 63 Preto Tecnoprado 50 Metros</h5>
-                        <p class="card-text">R$ 229,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Duto Corrugado 2&quot; DN 63 Preto Tecnoprado 50 Metros', 229.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Porcelanato 61082 Retificado Acetinado Branco 61x61cm 1,87m2</h5>
+                        <p class="card-text">R$46,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Porcelanato 61082 Retificado Acetinado Branco 61x61cm 1,87m2',46.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Duto+Corrugado+2%22+DN+63+Preto+Tecnoprado+50+Metros&preco=229.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Sifão+Extensível+Universal+Branco+66cm+DN38/40/48/50+Tigre&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
                 </div>
             </div>
+
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/hidraulicos/sifaoextensivel.webp" class="card-img-top" alt="Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre">
+                    <img src="img/piso/porcelanato culé.webp" class="card-img-top" alt="Porcelanato Barcelona Plata Retificado Acetinado Cinza 84x84cm 2,80m2">
                     <div class="card-body">
-                        <h5 class="card-title">Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre</h5>
-                        <p class="card-text">R$ 4,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Sifão Extensível Universal Branco 66cm DN38/40/48/50 Tigre', 4.90);" style="transition: all 0.3s ease; font-weight: bold;">
+                        <h5 class="card-title">Porcelanato Barcelona Plata Retificado Acetinado Cinza 84x84cm 2,80m2</h5>
+                        <p class="card-text"><R153></R153>,90</p>
+                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Porcelanato Barcelona Plata Retificado Acetinado Cinza 84x84cm 2,80m2',53.90);" style="transition: all 0.3s ease; font-weight: bold;">
                             Adicionar ao Carrinho
                         </button>
-                        <a href="compra.html?produto=Sifão+Extensível+Universal+Branco+66cm+DN38%2F40%2F48%2F50+Tigre&preco=4.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
-                            Comprar
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-4 col-sm-6 g-5">
-                <div class="card" style="background-color: transparent; border: none;">
-                    <img src="img/hidraulicos/baseregistro.webp" class="card-img-top" alt="Base para Registro de Pressão MVS Bruto 4416 3/4">
-                    <div class="card-body">
-                        <h5 class="card-title">Base para Registro de Pressão MVS Bruto 4416 3/4&quot; Deca</h5>
-                        <p class="card-text">R$ 44,90</p>
-                        <button type="button" class="btn btn-primary btn-sm" onclick="adicionarAoCarrinho('Base para Registro de Pressão MVS Bruto 4416 3/4&quot; Deca', 44.90);" style="transition: all 0.3s ease; font-weight: bold;">
-                            Adicionar ao Carrinho
-                        </button>
-                        <a href="compra.html?produto=Base+para+Registro+de+Pressão+MVS+Bruto+4416+3%2F4%22+Deca&preco=44.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
+                        <a href="compra.html?produto=Base+para+Registro+de+Pressão+MVS+Bruto+4416+3/4+Deca&preco=44.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
                         </a>
                     </div>
@@ -144,6 +150,7 @@
         </div>
     </div>
 </main>
+
 <footer class="bg-blue text-white py-4 mt-auto">
     <div class="container text-center">
         <p><strong>Endereço:</strong> Rua Mariana, 360 - Centro, Ipatinga-MG</p>
@@ -154,6 +161,7 @@
         </div>
     </div>
 </footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
