--- a/wwwroot/construcao.html
+++ b/wwwroot/construcao.html
@@ -31,11 +31,11 @@
                         <li><a class="dropdown-item" href="tintas.html">Tintas</a></li>
                         <li><a class="dropdown-item" href="vernizes.html">Vernizes</a></li>
                         <li><a class="dropdown-item" href="esmaltes.html">Esmaltes</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#ferramentas">Ferramentas</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#pisos">Pisos e Revestimentos</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#metais">Metais</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#portas">Portas</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#janelas">Janelas</a></li>
+                        <li><a class="dropdown-item" href="ferramentas.html">Ferramentas</a></li>
+                        <li><a class="dropdown-item" href="piso.html">Pisos e Revestimentos</a></li>
+                        <li><a class="dropdown-item" href="metais.html">Metais</a></li>
+                        <li><a class="dropdown-item" href="portas.html">Portas</a></li>
+                        <li><a class="dropdown-item" href="janelas.html">Janelas</a></li>
                     </ul>
                 </li>
 
@@ -61,6 +61,7 @@
                         </button>
                         <a href="compra.html?produto=Eletroduto+Corrugado+25mm+Amarelo+Adtex+50+Metros&preco=65.90" class="btn btn-danger btn-sm" style="transition: all 0.3s ease; font-weight: bold;">
                             Comprar
+                           
                         </a>
                     </div>
                 </div>
